test_cases/pass/p06.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT i
FOR (i=3, i > 0, i=i-1)
START FOR
    PRINT: i & " "
END FOR
END SCRIPT
