test_cases/fail/f28.lxr
SCRIPT AREA
START SCRIPT
DECLARE BOOL flag
flag=1
END SCRIPT
